--- a/pertama.html
+++ b/pertama.html
@@ -2,6 +2,16 @@
 <html>
     <head>
         <title>Belajar HTML</title>
+        <style>
+            h1 {
+                color: blue;
+                font-family: Arial;
+            }
+            p {
+                font-size: 16px;
+
+            }
+        </style>
     </head>
     <body>
         <h1>Halo Dunia!</h1>
