--- a/objectdandomlanjutan.html
+++ b/objectdandomlanjutan.html
@@ -44,7 +44,7 @@
         const alamat = document.querySelector('#alamat')
         const hobi = document.querySelector('#hobi')
         const kirim= document.querySelector('#kirim')
-        const hasil = document.querSelector('#tampil-biodata')
+        const hasil = document.querySelector('#tampil-biodata')
 
         kirim.addEventListener('click', () => {
             const biodata = {
